# JNU-CG-exp

./: .gitignore  README.md
ex1/: 实验报告1.doc
ex1/src/: App.cpp  App.h  CMakeLists.txt  main.cpp
ex1/src/Entities/: Circle2D.cpp  Circle2D.h  Entity2D.h  Line2D.cpp  Line2D.h  Point2D.h  Polygon2D.cpp  Polygon2D.h
ex1/src/Tools/: CircleTool.cpp  CircleTool.h  LineTool.cpp  LineTool.h  PolygonTool.cpp  PolygonTool.h  Tool.h
ex2/doc/: main.tex
ex2/ref/: ch6BoundaryFill.txt  ch6CircleMidpoint.txt  ch6EllipseMidpoint.txt  ch6FloodFill.txt  ch6LineBres.txt  ch6LineDDA.txt
ex2/src/: App.cpp  App.h  CMakeLists.txt  main.cpp
ex2/src/Entities/: CMakeLists.txt  Entity2D.h  Line2D.h  LineDDA2D.cpp  LineDDA2D.h  LineGL2D.cpp  LineGL2D.h  LineMidP2D.cpp  LineMidP2D.h  Polygon2D.h  PolygonGL2D.cpp  PolygonGL2D.h  PolygonScan2D.cpp  PolygonScan2D.h
ex2/src/Tools/: CMakeLists.txt  LineTool.h  PolygonTool.h  Tool.h
ex3/doc/: JNUexp.cls  main.tex
ex3/ref/: ch8CohenSutherlandLineClip2D.txt  ch8LiangBarskyLineClip2D.txt  ch8ViewingProgram2D.txt  绘制曲线.txt
ex3/src/: App.cpp  App.h  CMakeLists.txt  main.cpp
ex3/src/Entities/: BezierCas2D.cpp  BezierCas2D.h  CMakeLists.txt  LineClipLB2D.cpp  LineClipLB2D.h
ex3/src/Tools/: BezierTool.cpp  BezierTool.h  CMakeLists.txt  LineTool.cpp  LineTool.h  Tool.h
ex4/doc/: JNUexp.cls  main.tex
ex4/ref/: 5DG'S Earth And Moon.vcproj
ex4/ref/1.10/: 5DG'S Blend.cpp  Readme.txt
ex4/ref/1.11/: 5DG'S Earth And Moon.sln
ex4/ref/1.6/: 5DG'S 2D Texture Mapping.ncb
ex4/ref/1.7/: 5DG'S 3D Object-Soap.cpp  Readme.txt  (+2 more)
ex4/src/: CMakeLists.txt  main.cpp
ex5/doc/: main.tex
ex5/src/: CMakeLists.txt  Image.cpp  Image.h  main.cpp
ref/裁剪/: ch8SutherlandHodgmanPolygonClip2D.txt
(+30 files in other folders)
